Update SecurityConfig.java
permitiendo oleo-soft